<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_constraintVertical_bias="1">


    <ImageView
        android:id="@+id/backgroundId"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg" />

    <Button
        android:id="@+id/key_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/key_1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/key_2"
        app:layout_constraintTop_toBottomOf="@id/key_4"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/key_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/key_2"
        app:layout_constraintLeft_toRightOf="@id/key_1"
        app:layout_constraintRight_toLeftOf="@id/key_3"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/key_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/key_3"
        app:layout_constraintLeft_toRightOf="@id/key_2"
        app:layout_constraintRight_toLeftOf="@id/key_divide"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/key_divide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/key_divide"
        app:layout_constraintLeft_toRightOf="@id/key_3"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/key_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/key_4"
        app:layout_constraintBottom_toTopOf="@id/key_7"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/key_5"
        app:layout_constraintTop_toBottomOf="@id/key_1" />

    <Button
        android:id="@+id/key_5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/key_5"
        app:layout_constraintLeft_toRightOf="@id/key_4"
        app:layout_constraintRight_toRightOf="@id/key_6"
        app:layout_constraintTop_toBottomOf="@id/key_2" />


    <Button
        android:id="@+id/key_6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/key_6"
        app:layout_constraintLeft_toRightOf="@id/key_5"
        app:layout_constraintRight_toLeftOf="@id/key_times"
        app:layout_constraintTop_toBottomOf="@id/key_3" />

    <Button
        android:id="@+id/key_times"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/key_times"
        app:layout_constraintLeft_toRightOf="@id/key_6"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/key_divide" />

    <Button
        android:id="@+id/key_7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/key_7"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/key_8"
        app:layout_constraintTop_toBottomOf="@id/key_4" />

    <Button
        android:id="@+id/key_8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/key_8"
        app:layout_constraintLeft_toRightOf="@id/key_7"
        app:layout_constraintRight_toLeftOf="@id/key_9"
        app:layout_constraintTop_toBottomOf="@id/key_5" />

    <Button
        android:id="@+id/key_9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/key_9"
        app:layout_constraintLeft_toRightOf="@id/key_8"
        app:layout_constraintRight_toLeftOf="@id/key_sub"
        app:layout_constraintTop_toBottomOf="@id/key_6" />

    <Button
        android:id="@+id/key_sub"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/key_sub"
        app:layout_constraintLeft_toRightOf="@id/key_9"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/key_times" />

    <Button
        android:id="@+id/key_0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/key_0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/key_dot"
        app:layout_constraintTop_toBottomOf="@id/key_7" />

    <Button
        android:id="@+id/key_dot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/key_dot"
        app:layout_constraintLeft_toRightOf="@id/key_0"
        app:layout_constraintRight_toLeftOf="@id/key_equal"
        app:layout_constraintTop_toBottomOf="@id/key_8" />

    <Button
        android:id="@+id/key_equal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/key_equal"
        app:layout_constraintLeft_toRightOf="@id/key_dot"
        app:layout_constraintRight_toLeftOf="@id/key_plus"
        app:layout_constraintTop_toBottomOf="@id/key_9" />

    <Button
        android:id="@+id/key_plus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/key_plus"
        app:layout_constraintLeft_toRightOf="@id/key_equal"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/key_sub" />
</androidx.constraintlayout.widget.ConstraintLayout>